Actions
Bug #14143
closedkmem should learn we are no longer Solaris
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
kmem_init()
emits warnings that references the Solaris Tunable Parameters manual if certain kmem_flags are enabled. We should probably update this message.
Updated by Jason King 4 months ago
To test, I built a non-DEBUG build with kmem_flags=0xf and verified the resulting console message was as expected.
Updated by Electric Monk 4 months ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 2b91c4a58ba8e370434f09715e0270ff57ca30e3
commit 2b91c4a58ba8e370434f09715e0270ff57ca30e3 Author: Jason King <jason.brian.king@gmail.com> Date: 2022-01-24T17:56:51.000Z 14143 kmem should learn we are no longer Solaris Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Andy Fiddaman <andy@omnios.org> Reviewed by: Yuri Pankov <ypankov@tintri.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions