usr/src/uts/common/os/kmem.c
@@ -4462,8 +4462,7 @@ kmem_init(void)
 	if (((kmem_flags & ~(KMF_AUDIT | KMF_DEADBEEF | KMF_REDZONE |
 	    KMF_CONTENTS | KMF_LITE)) != 0) ||
 	    ((kmem_flags & KMF_LITE) && kmem_flags != KMF_LITE))
-		cmn_err(CE_WARN, "kmem_flags set to unsupported value 0x%x. "
-		    "See the Solaris Tunable Parameters Reference Manual.",
+		cmn_err(CE_WARN, "kmem_flags set to unsupported value 0x%x.",
 		    kmem_flags);
 
 #ifdef DEBUG
@@ -4481,8 +4480,7 @@ kmem_init(void)
 	    (kmem_flags & (KMF_AUDIT | KMF_DEADBEEF)) != 0)
 		cmn_err(CE_WARN, "High-overhead kmem debugging features "
 		    "enabled (kmem_flags = 0x%x).  Performance degradation "
-		    "and large memory overhead possible. See the Solaris "
-		    "Tunable Parameters Reference Manual.", kmem_flags);
+		    "and large memory overhead possible.", kmem_flags);
 #endif /* not DEBUG */
 
 	kmem_cache_applyall(kmem_cache_magazine_enable, NULL, TQ_SLEEP);
